# HyperSearch

./: .env.example  .gitignore  CHANGELOG.md  LICENSE.md  Launch-HyperSearch.cmd  Launch-HyperSearch.ps1  Launch-HyperSearch.vbs  README.md  SECURITY.md  SOURCE_OFFER.md  THIRD_PARTY_NOTICES.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  installer_problem.yml
.github/workflows/: ci.yml  container-images.yml
apps/api/: .dockerignore  Dockerfile  pyproject.toml
apps/api/hypersearch_api/: __init__.py  auth.py  config.py  exceptions.py  lifespan.py  logging.py  main.py  metrics.py  tracing.py
apps/api/hypersearch_api/providers/llm/: base.py  llamacpp.py  lmstudio.py  vllm.py
apps/api/hypersearch_api/routers/: admin.py  health.py  history.py  providers.py  research.py  search.py
apps/api/hypersearch_api/schemas/: history.py  provider.py  research.py  search.py
apps/api/hypersearch_api/services/: __init__.py  cache_service.py  dedupe_service.py  extract_service.py  fetch_service.py  provider_service.py  query_normalizer.py  ranking_service.py  research_service.py  search_service.py  searx_client.py  synthesize_service.py
apps/api/hypersearch_api/storage/: models.py  sqlite.py
apps/api/hypersearch_api/storage/migrations/: 0001_init.sql  0002_local_control_profiles.sql  0003_app_settings.sql
apps/desktop/: index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/ui/: Dockerfile  index.html  package-lock.json  package.json
docs/: agpl_license_posture_2026-05-09.md  api.md  architecture.md  beta_github_distribution_2026-05-08.md  dependabot_release_triage_2026-05-09.md  deployment.md  desktop-launcher.md  github_release_distribution_1_0_2026-05-09.md  github_release_distribution_1_1_2026-06-06.md  go_live_plan_2026-05-08.md  hypersearch_1_1_release_gate_status_2026-05-26.md  hyperv_installer_lab.md  installer_1_1_postmortem.md  local_control_1_0.md  ops.md  polish_pass_2026-05-07.md  public_publish_readiness_review_2026-05-10.md  public_release_remediation_implementation_2026-05-06.md  release_candidate_deployment.md  release_checklist.md  release_readiness_code_review_2026-05-06.md  research_reliability_ui_polish_2026-05-08.md  security_signing_release_plan_2026-05-09.md  test_results_2026-04-28_installer_and_roadmap.md  test_results_2026-05-05_laptop_installer_postmortem.md  testing_launch.md  windows_docker_compatibility_strategy.md  windows_installation_wizard_1_1_design.md  windows_installer_test_plan.md
docs/releases/: hypersearch-1.0-github-release.md  hypersearch-1.1-github-release.md
infra/docker/: .env.example  Caddyfile  docker-compose.dev.yml  docker-compose.yml
infra/systemd/: hypersearch.service
installer/windows/: HyperSearchInstallationWizard.ps1  HyperSearchInstallerCore.ps1  HyperSearchPrereqSetup.ps1  nsis-hooks.nsh
scripts/: Build-ContainerImages.ps1  Build-InstallationMedia.ps1  Deploy-HyperSearch.cmd  Deploy-HyperSearch.ps1  Invoke-HyperSearch.cmd  Invoke-HyperSearch.ps1  Sign-HyperSearchRelease.ps1  Test-ReleaseSecurity.ps1  Update-LicenseNotices.ps1  benchmark.py  install_linux.sh  smoke_test.sh
tests/: conftest.py
tests/e2e/: test_live_smoke.py
tests/integration/: test_health.py  test_local_control_api.py
tests/unit/: test_dedupe_service.py  test_installer_wizard.py  test_provider_service.py  test_query_normalizer.py  test_readiness.py  test_research_service.py  test_search_service.py  test_synthesize_service.py
tools/installer-lab/: Assert-HyperSearchInstallResult.ps1  New-HyperSearchIsoLabVm.ps1  (+19 more)
(+21 files in other folders)
