[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hypersearch-api"
version = "1.0.0"
description = "Production-minded local/network search service"
requires-python = ">=3.11"
authors = [{ name = "Robert Choudury" }]
license = { text = "AGPL-3.0-only" }
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.32,<1.0",
  "httpx>=0.27,<1.0",
  "pydantic>=2.9,<3.0",
]

[project.optional-dependencies]
cache = [
  "redis>=5.2,<6.0",
]
extract = [
  "trafilatura>=1.12,<2.0",
]
observability = [
  "opentelemetry-api>=1.29,<2.0",
  "opentelemetry-sdk>=1.29,<2.0",
  "opentelemetry-instrumentation-fastapi>=0.50b0,<1.0",
]
playwright = [
  "playwright>=1.50,<2.0",
]
dev = [
  "pytest>=8.3,<10.0",
  "pytest-asyncio>=0.24,<1.0",
]
all = [
  "redis>=5.2,<6.0",
  "trafilatura>=1.12,<2.0",
  "opentelemetry-api>=1.29,<2.0",
  "opentelemetry-sdk>=1.29,<2.0",
  "opentelemetry-instrumentation-fastapi>=0.50b0,<1.0",
  "playwright>=1.50,<2.0",
  "pytest>=8.3,<10.0",
  "pytest-asyncio>=0.24,<1.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["hypersearch_api*"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
